# Gyoza

./: .gitignore  Basic-physic-engine.kdev4  CMakeLists.txt
.kdev4/: Basic-physic-engine.kdev4
electrostatics_examples/: effencity_2_100000.in  effencity_3.in  effencity_5000.in  efficiency1000.in  example1.in  example2.in  example3.in  example4.in  example5.in  example6.in
src/: main.cpp
src/engine/colisions/: colision.cpp  colision.hpp
src/engine/electrostatics/: electrostatics.cpp  electrostatics.hpp
src/engine/structures/: vec2.cpp  vec2.hpp
src/engine/technicals/: rendering.cpp  rendering.hpp
src/experiments/: simple_electrostaistics_exp.cpp  simple_electrostatistic_exp.hpp
